ARROW-10125: [R] Int64 downcast check doesn't consider all chunks

The ArraysCanFitInteger function was erroneously exiting the loop over all chunks early after the first `true` was found, rather than bailing on the first `false`. All chunks need to fit in order to be able to downcast.

Closes #8292 from nealrichardson/r-fix-int64-downcast

Authored-by: Neal Richardson <neal.p.richardson@gmail.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>